# GStackAllocator

./: CMakeLists.txt  main.cpp
gstackallocator/: gstackallocator.hpp
